--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-runtime": "^6.0.0",
     "fastclick": "^1.0.6",
     "better-scroll": "^0.1.15",
+    "axios": "^0.16.1",
     "jsonp": "0.2.1"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
+    "express": "^4.16.2",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
