--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "fastclick": "^1.0.6",
     "better-scroll": "^0.1.15",
     "axios": "^0.16.1",
-    "jsonp": "0.2.1"
+    "jsonp": "0.2.1",
+    "vue-lazyload": "^1.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
